--- a/Web2/html_basic.html
+++ b/Web2/html_basic.html
@@ -24,10 +24,9 @@
         <!-- form 是用来给服务器传递数据的 tag -->
         <!-- action 属性是 path -->
         <!-- method 属性是 HTTP方法 一般是 get 或者 post -->
-        <!-- get post 的区别上课会讲 -->
         <form action="/" method="get">
             <!-- textarea 是一个文本域 -->
-            <!-- name rows cols 都是属性, 用处上课讲 -->
+            <!-- name rows cols 都是属性>
             <textarea name="message" rows="8" cols="40"></textarea>
             <!-- button type=submit 才可以提交表单 -->
             <button type="submit">GET 提交</button>
